--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mobx-react-lite": "^4.1.0",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
