--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
